--- a/index.html
+++ b/index.html
@@ -32,12 +32,13 @@
           <div class="input-group mb-3">
             <input type="text" class="form-control" placeholder="Введите пароль" aria-label="Введите пароль" aria-describedby="basic-addon2">
           </div>
-
       </div>
 
       <div class="button-auth">
-        <button type="button" class="btn btn-primary">Primary</button>
+        <button type="button" class="btn btn-primary">Войти</button>
       </div>
+
+      <div class="text-auth">Забыли email или пароль?</div>
     </div>
   </body>
 </html>
