--- a/main.html
+++ b/main.html
@@ -43,7 +43,7 @@
           </div>
         </div>
       </nav>
-
+<!-- TODO change img class -->
       <div class="wrapper">
         <div class="ellement">
           <img src="/images/lightning.svg" class="img-ell" alt="" />
@@ -148,24 +148,28 @@
     <div class="container container-info">
       <h3>Передача новых показаний</h3>
 
-      <div class="row row-info">
-        <div class="col-1 col-info__img"><img src="/images/warning.svg" alt=""></div>
-        <div class="col col-info__text">Рекомендуем передавать показания приборов учета до 25 числа. Показания, переданные после 25 числа, не будут приняты к расчету в этом месяце.</div>
-    </div>
+      <div class="info">
+        <div>
+          <img class="info-img" src="/images/warning.svg" alt="">
+          Рекомендуем передавать показания приборов учета до 25 числа. Показания, переданные после 25 числа, не будут приняты к расчету в этом месяце.
+        </div>
+      </div>
 
     <h4>Текущий расход: <span style="font-weight: bold;">-5617 (кВт.ч) </span> </h4>
     </div>
 
+    <!-- TODO fix that block -->
     <div class="container table">
-      <div class="row row-table">
-        <div class="col img-table"><img src="/images/photo.svg" alt=""></div>
-        <div class="col text-table">Загрузить показания с фото</div>
+    <div class="d-table">
+      <img class="" src="/images/photo.svg" alt="">
+     <span class="text-table">Загрузить показания с фото</span> 
     </div>
     </div>
 
     <div class="container container-table-2">
       <h4 class="h4-text">или</h4>
 
+      <!-- TODO fix text -->
       <div class="table-2">
         <span class="text-table-2">Введите показания с прибора</span>
     </div>
