--- a/index.html
+++ b/index.html
@@ -39,6 +39,8 @@
       </div>
 
       <div class="text-auth">Забыли email или пароль?</div>
+
+      <div class="text-without-auth">Отправить показания без авторизации</div>
     </div>
   </body>
 </html>
