--- a/personal_area.html
+++ b/personal_area.html
@@ -45,6 +45,7 @@
       </nav>
 
       <div class="wrapper">
+          <h1>Личный кабинет</h1>
         <div class="fields">
             <div class="input-text">Имя</div>
           <div class="input-group mb-3">
