--- a/main.html
+++ b/main.html
@@ -18,31 +18,29 @@
     <link rel="stylesheet" href="styles/styles.css" />
   </head>
   <body>
-    <div class="container">
-      <nav class="navbar navbar-expand-lg navbar-light">
-        <div class="container-fluid">
-          <a class="navbar-brand" href="#"
-            ><img src="/images/icon.svg" alt="logo"
-          /></a>
-          <div
-            class="collapse navbar-collapse d-flex justify-content-end"
-            id="navbarNav"
-          >
-            <ul class="navbar-nav">
-              <li class="nav-item nav-item__bell">
-                <a class="nav-link active" aria-current="page" href="#"
-                  ><img src="/images/bell.svg" alt=""
-                /></a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="#"
-                  ><img src="/images/menu_btn.svg" alt=""
-                /></a>
-              </li>
-            </ul>
-          </div>
-        </div>
-      </nav>
+
+    <nav class="navbar navbar-expand-lg navbar-light ">
+      <div class="container"> 
+        <ul class="nav nav-pills">
+          <li class="nav-item">
+            <a class="navbar-brand d-flex " href="#"
+                ><img src="/images/logo.svg" alt="logo"
+              /></a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Главная</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Личный кабинет</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">История</a>
+          </li>
+        </ul>
+      </div>
+</nav>
+
+      <div class="container">
 <!-- TODO change img class -->
       <div class="wrapper">
         <div class="ellement">
@@ -160,7 +158,7 @@
 
     <!-- TODO fix that block -->
     <div class="container table">
-    <div class="d-table">
+    <div>
       <img class="" src="/images/photo.svg" alt="">
      <span class="text-table">Загрузить показания с фото</span> 
     </div>
@@ -171,13 +169,50 @@
 
       <!-- TODO fix text -->
       <div class="table-2">
-        <span class="text-table-2">Введите показания с прибора</span>
+        <div class="input-group">
+          <input
+            type="text"
+            name=""
+            class="form-control"
+            aria-label="Sizing example input"
+            aria-describedby="inputGroup-sizing-default"
+            placeholder="Введите показания с прибора"
+          />
+        </div>
     </div>
 
     <div class="btn-insert">
       <button type="button" class="btn btn-danger">Передать показание</button>
     </div>
-    
     </div>
+
+    <!-- Footer -->
+<footer class="text-center text-white" style="background-color:#f7f7f7;">
+  <!-- Grid container -->
+  <div class="container p-4">
+
+     <!-- Section: Text -->
+     <section class="mb-4">
+      <p>
+        <h3>TEXT</h3>
+  TEXT
+      </p>
+    </section>
+    <!-- Section: Text -->
+
+
+
+  </div>
+  <!-- Grid container -->
+
+  <!-- Copyright -->
+  <div class="text-center p-3" style="background-color: #043D7D;">
+    © 2021 Copyright:
+    <a class="text-white" href="#">TEXT</a>
+  </div>
+  <!-- Copyright -->
+
+</footer>
+<!-- Footer -->
   </body>
 </html>
