--- a/whithout_auth.html
+++ b/whithout_auth.html
@@ -19,25 +19,25 @@
   </head>
   <body>
     <nav class="navbar navbar-expand-lg navbar-light ">
-      <div class="container"> 
-        <ul class="nav nav-pills">
-          <li class="nav-item">
-            <a class="navbar-brand d-flex " href="#"
-                ><img src="/images/logo.svg" alt="logo"
-              /></a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">Главная</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">Личный кабинет</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">История</a>
-          </li>
-        </ul>
-      </div>
-    </nav>
+        <div class="container"> 
+          <ul class="nav nav-pills">
+            <li class="nav-item">
+              <a class="navbar-brand d-flex " href="#"
+                  ><img src="/images/logo.svg" alt="logo"
+                /></a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Главная</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Личный кабинет</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">История</a>
+            </li>
+          </ul>
+        </div>
+  </nav>
 
     <div class="container">
       <div class="wrapper">
@@ -103,6 +103,7 @@
           <div class="input-group mb-3">
             <input
               type="text"
+              name=""
               name="Email"
               class="form-control"
               aria-label="Sizing example input"
@@ -206,6 +207,30 @@
               aria-label="Sizing example input"
               aria-describedby="inputGroup-sizing-default"
               placeholder="Введите индивидуальный номер счета"
+            />
+          </div>
+        </div>
+
+        <div class="container table">
+            <div>
+              <img class="" src="/images/photo.svg" alt="">
+             <span class="text-table">Загрузить показания с фото</span> 
+            </div>
+            </div>
+        
+            <div class="container container-table-2">
+              <h4 class="h4-text">или</h4>
+
+        <div class="fields">
+            <div class="input-text">Показания</div>
+          <div class="input-group mb-3">
+            <input
+              type="text"
+              name=""
+              class="form-control"
+              aria-label="Sizing example input"
+              aria-describedby="inputGroup-sizing-default"
+              placeholder="Введите показания с прибора"
             />
           </div>
         </div>
